<resources>
    <string name="app_name">SmartCart</string>
    <string name="register_here">Register Here!</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="WelcomeInfo">Search local stores and items at best prices</string>
    <string name="settingsButton">Settings</string>
    <string name="cartButton">Cart</string>
    <string name="smartcartlogo">smartcartLogo</string>
    <string name="sign_up">Sign Up</string>
    <string name="termsAndCondition">By Signing up, you agree to our terms and condition</string>
    <string name="enterEmail">Enter email</string>
    <string name="enterPassword">Enter password</string>
    <string name="signUp">Sign Up</string>
    <string name="smartcartTextLogo">SmartCart</string>
    <string name="string_smartcartlogo">SmartCart</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_cart">LoginActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_prikaz_popisa">PrikazPopisaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_prikaz_stavki">PrikazStavkiActivity</string>
    <string name="ime">Ime</string>
    <string name="addButton">Add list</string>
    <string name="mapLogo">Map logo</string>
    <string name="store_name">Store Name</string>
    <string name="store_location">Store location</string>
    <string name="store_opening_time">Store opening time</string>
    <string name="store_closeing_time">Store closeing time</string>
    <string name="type_in_a_barcode">Type in a barcode</string>
    <string name="submit">Submit</string>
    <string name="successfully_added">Sucessfully added</string>
    <string name="no_barcode_in_store">Could not find item in the store</string>
    <string name="hiMessage">Hi</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_odabir_popisa">Odabir_popisa</string>
    <string name="title_activity_izracun_cijene">IzracunCijeneActivity</string>
    <string name="title_activity_odabir_popisa_za_brisanje">Odabir_popisa_za_brisanje</string>
</resources>
